pxc/tests/test_001_px/constmet5.px
import common -;

namespace constmet5;

threaded struct foo {
  int x;
  function int n(int y) {
    int oldx = x;
    x = y;
    return oldx;
  }
}

{
  cptr{foo} v = to_cptr(foo(10));
  println(v->n(20)); // error
}
